Updated leading tabs versus spaces